tests/snapshots/run_wpt_conformance__litert_logicalAnd_uint8_broadcast_2D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_and.https.any.js",
    "logicalAnd uint8 broadcast 2D to 4D",
    "litert",
    "PASS",
)
